/*
 * Copyright 2023, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.server.route;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.server.route.given.switchman";
option java_outer_classname = "SwitchmanProto";
option java_multiple_files = true;

// A switch identifier.
message SwitchId {
    string id = 1;
}

// A position of a switch.
enum SwitchPosition {
    SWITCH_POSITION_UNDEFINED = 0;
    LEFT = 1;
    RIGHT = 2;
}

// A log with counters of operations per switchman, and list of missing switchman.
message LogState {
    option (entity).kind = AGGREGATE;

    map<string, int32> counters = 1;

    repeated string missing_switchman = 2;
}

// A simple counter of turned switches.
message SwitchmanLog {
    option (entity).kind = AGGREGATE;

    // The name of the switchman, which serves as the ID.
    string name = 1 [(required) = true];

    // The number of turned switches.
    int32 switch_count = 2;
}
